--- a/cli/package.json
+++ b/cli/package.json
@@ -7,11 +7,12 @@
     "@testing-library/react": "^10.0.4",
     "@testing-library/user-event": "^10.3.1",
     "materialize-css": "^1.0.0",
-    "node-sass": "^4.14.1",
+    "mern": "file:..",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "sass": "^1.45.1"
   },
   "scripts": {
     "start": "react-scripts start",
